--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -44,7 +44,7 @@ jobs:
     - name: Upload SARIF file
       uses: github/codeql-action/upload-sarif@v2
       with:
-          sarif_file: securityCenter/sboms/$GITHUB_REPOSITORY.json
+          sarif_file: trivy-results.sarif
           category: my-analysis-tool
       env:
         GITHUB_TOKEN: ${{ secrets.GHACTIONSECRET }}
