--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -17,6 +17,14 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+
+
+    - name: Checkout securityCenter repository
+      uses: actions/checkout@v3
+      with:
+        repository: bsanchezmir/securityCenter
+        token: ${{ secrets.GHACTIONSECRET }}
+        path: securityCenter
       
     - name: Set up Trivy
       run: |
@@ -27,13 +35,11 @@ jobs:
         
     - name: Run Trivy vulnerability scanner
       run: |
-        trivy sbom --format sarif --vuln-type os,library --severity UNKNOWN,LOW,MEDIUM,HIGH,CRITICAL --output trivy-results.sarif sboms/bsanchezmir/lensTest.json
-
+        trivy sbom --format sarif --vuln-type os,library --severity UNKNOWN,LOW,MEDIUM,HIGH,CRITICAL --output trivy-results.sarif securityCenter/sboms/$GITHUB_REPOSITORY.json
     - name: ls sarif file
       run: |
         cat trivy-results.sarif
-
-    - name: Upload SARIF for SBOM
+    - name: Upload SARIF file
       uses: github/codeql-action/upload-sarif@v2
       with:
           sarif_file: trivy-results.sarif
