--- a/.github/workflows/sbomicrosoft.yml
+++ b/.github/workflows/sbomicrosoft.yml
@@ -1,31 +1,31 @@
-
 name: SBOM upload
 
-on: 
+on:
   workflow_dispatch:
-  push: 
+  push:
     branches: ["main"]
 
 jobs:
   SBOM-upload:
 
     runs-on: ubuntu-latest
-    permissions: 
+    permissions:
       id-token: write
       contents: write
-      
+
     steps:
     - uses: actions/checkout@v3
+    - name: Setup Syft
+      run: |
+        curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh | sh -s -- -b /usr/local/bin
+
     - name: Generate SBOM
-      run: | 
-        curl -Lo $RUNNER_TEMP/sbom-tool https://github.com/microsoft/sbom-tool/releases/latest/download/sbom-tool-linux-x64
-        chmod +x $RUNNER_TEMP/sbom-tool
-        $RUNNER_TEMP/sbom-tool generate -b . -bc . -pn ${{ github.repository }} -pv 1.0.0 -ps OwnerName -nsb https://sbom.mycompany.com -V Verbose
+      run: syft . -ospdx-json@2.2=$GITHUB_REPOSITORY.json
+
     - uses: actions/upload-artifact@v3
       with:
         name: sbom
-        path: _manifest/spdx_2.2
-    - name: SBOM upload 
+    - name: SBOM upload
       uses: advanced-security/spdx-dependency-submission-action@v0.0.1
       with:
-        filePath: "_manifest/spdx_2.2/"
+        filePath: "$GITHUB_REPOSITORY.json"
