--- a/.github/workflows/patch_patch.yml
+++ b/.github/workflows/patch_patch.yml
@@ -1,6 +1,7 @@
-name: Patch vulnerable image and push to GHCR
+name: Patch vulnerable images
 
 on:
+  # Customize these triggers as needed:
   push:
     branches:
       - main
@@ -13,15 +14,19 @@ permissions:
   packages: write
 
 jobs:
-  patch-and-push:
+  patch:
     runs-on: ubuntu-latest
-    steps:
-      # 1. Check out your repository (if needed)
-      - name: Checkout code
-        uses: actions/checkout@v2
+    strategy:
+      fail-fast: false
+      matrix:
+        images:
+          - "docker.io/library/alpine:3.18.4"
+          - "docker.io/openpolicyagent/opa:0.46.0"
+          - "docker.io/library/hello-world:latest"
 
-      # 2. Generate a Trivy report for fixable OS vulnerabilities
-      - name: Scan with Trivy
+    steps:
+      # 1. Generate Trivy report for each matrix image
+      - name: Generate Trivy Report
         uses: aquasecurity/trivy-action@d43c1f16c00cfd3978dde6c07f4bbcf9eb6993ca
         with:
           scan-type: "image"
@@ -29,9 +34,9 @@ jobs:
           output: "report.json"
           ignore-unfixed: true
           vuln-type: "os"
-          image-ref: docker.io/library/alpine:3.18.4
+          image-ref: ${{ matrix.images }}
 
-      # 3. Check how many fixable OS vulnerabilities were found
+      # 2. Check whether there are any fixable OS package vulnerabilities
       - name: Check vulnerability count
         id: vuln_count
         run: |
@@ -42,44 +47,45 @@ jobs:
               | .Vulnerabilities[]
             ] | length else 0 end' "$report_file")
 
-          echo "Detected $vuln_count fixable OS vulnerabilities in alpine:3.18.4"
+          echo "Detected $vuln_count fixable OS vulnerabilities in ${{ matrix.images }}"
           echo "vuln_count=$vuln_count" >> $GITHUB_OUTPUT
 
-      # 4. Patch vulnerabilities (if any) with COPA
+      # 3. Run COPA action (patch) only if vulnerabilities were found
       - name: Run Copa action
         if: steps.vuln_count.outputs.vuln_count != '0'
         id: copa
         uses: project-copacetic/copa-action@main
         with:
-          image: docker.io/library/alpine:3.18.4
+          image: ${{ matrix.images }}
           image-report: "report.json"
           patched-tag: "patched"
-          timeout: "5m"            # optional
-          output: "vex.json"       # store the result as vex.json
-          format: "openvex"        # default is openvex
+          timeout: "5m" # optional, default is 5m
+          output: "vex.json" # We'll parse this to see which CVEs were fixed
+          format: "openvex"  # optional, default is openvex
 
-      # 5. Fix permissions on vex.json so we can read it
+      # 4. Fix permissions on vex.json so we can read it
       - name: Fix vex.json permissions
         if: steps.copa.conclusion == 'success'
         run: |
+          # Only chmod if vex.json actually exists
           if [ -f vex.json ]; then
             sudo chmod 644 vex.json
           else
             echo "No vex.json found. Possibly no patch was generated or no vulnerabilities were fixed."
           fi
 
-      # 6. Display which CVEs got fixed
+      # 5. Show which CVEs were patched
       - name: Show patched CVEs
         if: steps.copa.conclusion == 'success'
         run: |
-          echo "The following CVEs were patched in alpine:3.18.4:"
+          echo "===== CVEs patched in ${{ matrix.images }} ====="
           jq -r '
             .statements
             | map(select(.status == "fixed"))
             | .[].vulnerability.id
           ' vex.json
 
-      # 7. Log in to GitHub Container Registry (GHCR)
+      # 6. Log in to GitHub Container Registry (GHCR)
       - name: Login to GHCR
         if: steps.copa.conclusion == 'success' || steps.vuln_count.outputs.vuln_count == '0'
         uses: docker/login-action@v3
@@ -88,18 +94,24 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # 8. Tag and push the final image to GHCR
-      - name: Push final image to GHCR
+      # 7. Push either the patched image (if any) or the original
+      - name: Push patched image
         if: steps.login.conclusion == 'success'
         run: |
           if [ "${{ steps.vuln_count.outputs.vuln_count }}" = "0" ]; then
-            echo "No vulnerabilities to patch, pushing original alpine:3.18.4"
-            docker pull docker.io/library/alpine:3.18.4
-            docker tag docker.io/library/alpine:3.18.4 ghcr.io/${{ github.repository_owner }}/alpine-patched:latest
+            echo "No fixable vulnerabilities. Pushing original: ${{ matrix.images }}"
+            docker pull ${{ matrix.images }}
+            # replace slashes and colons to create a valid tag suffix
+            SANITIZED_TAG=$(echo "${{ matrix.images }}" | tr '/:' '-')
+            TARGET="ghcr.io/${{ github.repository_owner }}/patched-${SANITIZED_TAG}:latest"
+            docker tag "${{ matrix.images }}" "$TARGET"
           else
             PATCHED_LOCAL="${{ steps.copa.outputs.patched-image }}"
-            docker tag "$PATCHED_LOCAL" ghcr.io/${{ github.repository_owner }}/alpine-patched:latest
+            # replace slashes and colons to create a valid tag suffix
+            SANITIZED_TAG=$(echo "${{ matrix.images }}" | tr '/:' '-')
+            TARGET="ghcr.io/${{ github.repository_owner }}/patched-${SANITIZED_TAG}:latest"
+            docker tag "$PATCHED_LOCAL" "$TARGET"
           fi
 
-          echo "Pushing ghcr.io/${{ github.repository_owner }}/alpine-patched:latest..."
-          docker push ghcr.io/${{ github.repository_owner }}/alpine-patched:latest
+          echo "Pushing $TARGET..."
+          docker push "$TARGET"
