--- a/.github/workflows/patch_patch.yml
+++ b/.github/workflows/patch_patch.yml
@@ -1,7 +1,6 @@
 name: Patch vulnerable images
 
 on:
-  # Customize these triggers as needed:
   push:
     branches:
       - main
@@ -25,7 +24,7 @@ jobs:
           - "docker.io/library/hello-world:latest"
 
     steps:
-      # 1. Generate Trivy report for each matrix image
+      # 1. Trivy scan for OS package vulns
       - name: Generate Trivy Report
         uses: aquasecurity/trivy-action@d43c1f16c00cfd3978dde6c07f4bbcf9eb6993ca
         with:
@@ -36,7 +35,7 @@ jobs:
           vuln-type: "os"
           image-ref: ${{ matrix.images }}
 
-      # 2. Check whether there are any fixable OS package vulnerabilities
+      # 2. Count fixable vulns
       - name: Check vulnerability count
         id: vuln_count
         run: |
@@ -50,7 +49,7 @@ jobs:
           echo "Detected $vuln_count fixable OS vulnerabilities in ${{ matrix.images }}"
           echo "vuln_count=$vuln_count" >> $GITHUB_OUTPUT
 
-      # 3. Run COPA action (patch) only if vulnerabilities were found
+      # 3. Patch with COPA if vulnerabilities exist
       - name: Run Copa action
         if: steps.vuln_count.outputs.vuln_count != '0'
         id: copa
@@ -59,33 +58,58 @@ jobs:
           image: ${{ matrix.images }}
           image-report: "report.json"
           patched-tag: "patched"
-          timeout: "5m" # optional, default is 5m
-          output: "vex.json" # We'll parse this to see which CVEs were fixed
-          format: "openvex"  # optional, default is openvex
+          timeout: "5m"
+          output: "vex.json"
+          format: "openvex"
 
-      # 4. Fix permissions on vex.json so we can read it
+      # 4. Fix vex.json permissions (in case it's root-owned)
       - name: Fix vex.json permissions
         if: steps.copa.conclusion == 'success'
         run: |
-          # Only chmod if vex.json actually exists
           if [ -f vex.json ]; then
             sudo chmod 644 vex.json
           else
-            echo "No vex.json found. Possibly no patch was generated or no vulnerabilities were fixed."
+            echo "No vex.json found. Possibly COPA didn't generate it or no patches were applied."
           fi
 
-      # 5. Show which CVEs were patched
+      # 5. Print vex.json for debugging (to see what's actually in it)
+      - name: Show vex.json contents
+        if: steps.copa.conclusion == 'success'
+        run: |
+          if [ -f vex.json ]; then
+            echo "==== vex.json content for ${{ matrix.images }} ===="
+            cat vex.json
+          else
+            echo "No vex.json file was generated."
+          fi
+
+      # 6. Display which CVEs were fixed
       - name: Show patched CVEs
         if: steps.copa.conclusion == 'success'
         run: |
+          if [ ! -f vex.json ]; then
+            echo "No vex.json to parse."
+            exit 0
+          fi
+
           echo "===== CVEs patched in ${{ matrix.images }} ====="
+          # This jq query prints only the "fixed" vulnerabilities from vex.json
           jq -r '
             .statements
             | map(select(.status == "fixed"))
             | .[].vulnerability.id
-          ' vex.json
+          ' vex.json || echo "None found."
 
-      # 6. Log in to GitHub Container Registry (GHCR)
+      # 7. Upload vex.json as an artifact (for each matrix image)
+      - name: Upload vex.json artifact
+        if: steps.copa.conclusion == 'success'
+        uses: actions/upload-artifact@v3
+        with:
+          name: vex-${{ matrix.images }}
+          path: vex.json
+          if-no-files-found: ignore
+
+      # 8. Log in to GHCR (whether or not we patched)
       - name: Login to GHCR
         if: steps.copa.conclusion == 'success' || steps.vuln_count.outputs.vuln_count == '0'
         uses: docker/login-action@v3
@@ -94,24 +118,22 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # 7. Push either the patched image (if any) or the original
-      - name: Push patched image
+      # 9. Push either the patched or original image
+      - name: Push final image
         if: steps.login.conclusion == 'success'
         run: |
+          # We create a safe tag name that doesn't contain slashes/colons
+          SANITIZED_TAG=$(echo "${{ matrix.images }}" | tr '/:' '-')
+          FINAL_TAG="ghcr.io/${{ github.repository_owner }}/patched-${SANITIZED_TAG}:latest"
+
           if [ "${{ steps.vuln_count.outputs.vuln_count }}" = "0" ]; then
-            echo "No fixable vulnerabilities. Pushing original: ${{ matrix.images }}"
+            echo "No fixable vulns. Pushing original: ${{ matrix.images }}"
             docker pull ${{ matrix.images }}
-            # replace slashes and colons to create a valid tag suffix
-            SANITIZED_TAG=$(echo "${{ matrix.images }}" | tr '/:' '-')
-            TARGET="ghcr.io/${{ github.repository_owner }}/patched-${SANITIZED_TAG}:latest"
-            docker tag "${{ matrix.images }}" "$TARGET"
+            docker tag ${{ matrix.images }} "$FINAL_TAG"
           else
             PATCHED_LOCAL="${{ steps.copa.outputs.patched-image }}"
-            # replace slashes and colons to create a valid tag suffix
-            SANITIZED_TAG=$(echo "${{ matrix.images }}" | tr '/:' '-')
-            TARGET="ghcr.io/${{ github.repository_owner }}/patched-${SANITIZED_TAG}:latest"
-            docker tag "$PATCHED_LOCAL" "$TARGET"
+            docker tag "$PATCHED_LOCAL" "$FINAL_TAG"
           fi
 
-          echo "Pushing $TARGET..."
-          docker push "$TARGET"
+          echo "Pushing $FINAL_TAG..."
+          docker push "$FINAL_TAG"
