--- a/.github/workflows/patch_patch.yml
+++ b/.github/workflows/patch_patch.yml
@@ -40,9 +40,11 @@ jobs:
         id: vuln_count
         run: |
           report_file="report.json"
-          vuln_count=$(jq 'if .Results then [.Results[] 
-            | select(.Class=="os-pkgs" and .Vulnerabilities!=null) 
-            | .Vulnerabilities[]] | length else 0 end' "$report_file")
+          vuln_count=$(jq 'if .Results then [
+              .Results[]
+              | select(.Class=="os-pkgs" and .Vulnerabilities!=null)
+              | .Vulnerabilities[]
+            ] | length else 0 end' "$report_file")
           echo "Detected $vuln_count fixable OS vulnerabilities in ${{ matrix.images }}"
           echo "vuln_count=$vuln_count" >> $GITHUB_OUTPUT
 
@@ -86,13 +88,13 @@ jobs:
             echo "None" > cves_fixed.txt
           fi
 
-      # 5. Upload artifacts for reference (Trivy report, patched CVEs)
+      # 5. Upload artifacts (Trivy report and cves_fixed.txt)
       - name: Upload artifacts
         if: steps.copa.conclusion == 'success'
         uses: actions/upload-artifact@v3
         with:
-          # We'll create a sanitized suffix based on the image name
-          name: patched-details-${{ matrix.images | replace('/', '-') | replace(':', '-') }}
+          # Use nested replace instead of pipeline
+          name: patched-details-${{ replace(replace(matrix.images, '/', '-'), ':', '-') }}
           path: |
             report.json
             cves_fixed.txt
@@ -112,7 +114,6 @@ jobs:
       - name: Push patched image
         if: steps.login.conclusion == 'success'
         run: |
-          # We'll create a tag that's safe (remove / and :)
           SANITIZED_TAG=$(echo "${{ matrix.images }}" | tr '/:' '-')
           REPO_OWNER="${{ github.repository_owner }}"
           FINAL_IMAGE="ghcr.io/${REPO_OWNER}/copa-patched:${SANITIZED_TAG}"
