--- a/.github/workflows/patch_patch.yml
+++ b/.github/workflows/patch_patch.yml
@@ -17,12 +17,15 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
-      max-parallel: 2
+      #max-parallel: 2
       matrix:
         images:
           - "docker.io/library/alpine:3.18.4"
           - "docker.io/openpolicyagent/opa:0.46.0"
           - "docker.io/library/hello-world:latest"
+          - "ghcr.io/aquasecurity/trivy-operator:0.16.1"
+          - "quay.io/k8slens/bored-agent:0.12.8"
+          - "quay.io/k8slens/recurly-api-proxy:0.5.3"
 
     steps:
       # 1. Trivy scan for OS-level vulnerabilities
