--- a/.github/workflows/patch_patch.yml
+++ b/.github/workflows/patch_patch.yml
@@ -130,29 +130,47 @@ jobs:
 
   merge_cves:
     runs-on: ubuntu-latest
-    needs: patch  # Ensures this runs AFTER all matrix jobs complete
+    needs: patch 
     steps:
       - name: Download all CVE reports
         uses: actions/download-artifact@v4
         with:
           path: cve_reports/
 
-      - name: Merge all CVE reports into one file
+      - name: Merge and Format CVE Reports
         run: |
           echo "### CVE Report for Release" > full_cves_report.md
           echo "" >> full_cves_report.md
 
           for file in $(find cve_reports -name "cves_report.txt"); do
             IMAGE_NAME=$(basename "$(dirname "$file")")  # Extract image name
-            echo "## CVEs for Image: $IMAGE_NAME" >> full_cves_report.md
-            cat "$file" >> full_cves_report.md
+
+            echo "## Image: $IMAGE_NAME" >> full_cves_report.md
             echo "" >> full_cves_report.md
+            echo "| CVE ID | Severity | Title |" >> full_cves_report.md
+            echo "|--------|----------|-------|" >> full_cves_report.md
+
+            # Count CVEs
+            CVE_COUNT=$(wc -l < "$file")
+            if [[ "$CVE_COUNT" -eq 0 ]]; then
+              echo "| No fixable vulnerabilities found | | |" >> full_cves_report.md
+            else
+              while IFS= read -r line; do
+                CVE_ID=$(echo "$line" | awk -F', ' '{print $1}' | sed 's/CVE: //')
+                SEVERITY=$(echo "$line" | awk -F', ' '{print $2}' | sed 's/Severity: //')
+                TITLE=$(echo "$line" | awk -F', ' '{print $3}' | sed 's/Title: //')
+
+                echo "| $CVE_ID | $SEVERITY | $TITLE |" >> full_cves_report.md
+              done < "$file"
+            fi
+
+            echo "" >> full_cves_report.md  # Add spacing between images
           done
 
-          echo "Merged CVE Report:"
+          echo "Merged CVEs Report:"
           cat full_cves_report.md
 
-      - name: Upload Final Merged CVE Report
+      - name: Upload Formatted CVE Report
         uses: actions/upload-artifact@v4
         with:
           name: full-cve-report
